# Acord

./: .gitignore  .gitmodules  Cargo.toml  LICENCE  README.md  build.sh  build_universal.sh  debug.sh  default.nix  install.sh
core/: Cargo.toml  build.rs  cbindgen.toml
core/include/: acord.h
core/src/: doc.rs  document.rs  eval.rs  ffi.rs  highlight.rs  interp.rs  lib.rs  persist.rs
ios/: Info.plist  project.yml
ios/Acord.xcodeproj/: project.pbxproj
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/src/: AcordApp.swift  Debug.swift  DocumentPicker.swift  IcedViewportRepresentable.swift  IcedViewportView.swift  MenuBar.swift  PermissionsManager.swift  ViewportController.swift
linux/: Cargo.toml
linux/src/: app.rs  config.rs  main.rs  shortcuts.rs
macos/: Info.plist
macos/src/: AppDelegate.swift  AppState.swift  DocumentBrowserWindow.swift  IcedBrowserView.swift  IcedViewportView.swift  RustBridge.swift  main.swift
scripts/: _build-dirs.sh
scripts/android/: select.sh
scripts/ios/: build.sh  debug.sh  generate-icons.sh  install.sh  select.sh  xcodeproj.sh
scripts/linux/: build.sh  debug.sh  install.sh
scripts/macos/: build-universal.sh  build.sh  debug.sh  install.sh  package.sh
scripts/windows/: build-universal.ps1  build.ps1  debug.ps1
src/: AppDelegate.swift  AppState.swift  ConfigManager.swift  DocumentBrowserWindow.swift  IcedViewportView.swift  SettingsView.swift  Theme.swift  TitleBarView.swift
viewport/: Cargo.toml  build.rs  cbindgen.toml
viewport/include/: acord.h
viewport/src/: block.rs  blocks.rs  bridge.rs  editor.rs  export.rs  handle.rs  heading_block.rs  hr_block.rs  lib.rs  module.rs  oklab.rs  palette.rs  print.rs  selection.rs  sidecar.rs  syntax.rs  table_block.rs  text_block.rs  text_widget.rs  tree_block.rs
viewport/src/browser/: handle.rs  mod.rs  model.rs  preview.rs  state.rs  ui.rs
viewport/src/widgets/: dialog.rs  menu.rs  mod.rs  style.rs
windows/: Cargo.toml  build.ps1  build.rs  build_universal.ps1  debug.ps1
windows/src/: app.rs  config.rs  main.rs  menu.rs  shortcuts.rs
xtask/: Cargo.toml
xtask/src/: main.rs
