[package]
name = "acord-linux"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "acord"
path = "src/main.rs"

# x11 and wayland are independent winit backends. Default builds enable both
# so a single binary runs on either display server. The build script can pass
# `--no-default-features --features x11` (or `wayland`) to force one — useful
# for flatpak builds or stripped-down distros.
[features]
default = ["x11", "wayland"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]

[dependencies]
acord-core = { path = "../core" }
acord-viewport = { path = "../viewport" }
# rwh_06 = raw-window-handle 0.6 trait impls (HasWindowHandle/HasDisplayHandle).
# Required because we lift the surface handle out of the winit Window before
# handing it to wgpu via viewport_create.
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
arboard = "3"
rfd = "0.15"
raw-window-handle = "0.6"
wgpu = "27"
iced_wgpu = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
image = "0.25"
