[package]
name = "acord-viewport"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
acord-core = { path = "../core" }
iced_wgpu = "0.14"
iced_graphics = "0.14"
iced_runtime = "0.14"
iced_widget = { version = "0.14", features = ["wgpu", "markdown", "canvas", "image"] }
image = "0.25"
dirs = "6"
wgpu = "27"
raw-window-handle = "0.6"
pollster = "0.4"
smol_str = "0.2"
cosmic-text = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
ureq = "3"
filetime = "0.2"
printpdf = { version = "0.9", default-features = false }

[target.'cfg(not(target_os = "ios"))'.dependencies]
arboard = "3"
trash = "5"

[build-dependencies]
cbindgen = "0.29"
