[package]
name = "acord-windows"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "acord"
path = "src/main.rs"

[dependencies]
acord-core = { path = "../core" }
acord-viewport = { path = "../viewport" }
winit = "0.30"
muda = "0.16"
arboard = "3"
rfd = "0.15"
raw-window-handle = "0.6"
wgpu = "27"
iced_wgpu = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
